# ascend-sdk-go

./: BUILD.bazel  LICENSE  README.md  README_full.md  SECURITY.md  USAGE.md  accountcreation.go  accountmanagement.go  accounttransfers.go  achtransfers.go  alternativeaccountaccreditation.go  alternativeinvestmentdocuments.go  alternativeinvestments.go  alternativeorders.go  assets.go  assettradingconfig.go  authentication.go  bankrelationships.go  basketorders.go  buyingpower.go  cashbalances.go  checks.go  createorder.go  dataretrieval.go  enrollmentsandagreements.go  feesandcredits.go  fixedincomepricing.go  gen.yaml  go.mod  go.sum  instantcashtransferict.go  investigations.go  investordocs.go  journals.go  ledger.go  margins.go  optioninstructions.go  optionorders.go  orders.go  personmanagement.go  (+16 more)
.github/workflows/: tag-release.yml
.speakeasy/: workflow.yaml
internal/config/: sdkconfiguration.go
internal/hooks/: BUILD.bazel  accesstoken_hooks.go  accesstoken_hooks_test.go  hooks.go  registration.go
internal/utils/: BUILD.bazel  form.go  json.go  pathparams.go  queryparams.go  retries.go
models/components/: BUILD.bazel  acatsasset.go  acatstransfer.go  accepttransferrequestcreate.go  accepttransferresponse.go  account.go  accountaccreditation.go  accountdocumentuploadrequestcreate.go  accountgoalscreate.go  accountgoalsupdate.go  accountrequestcreate.go  accountrequestupdate.go  accounttaxprofilecreate.go  accounttaxprofileupdate.go  accruedinterest.go  achdeposit.go  achdepositcreate.go  achdepositschedule.go  achdepositschedulecreate.go  achdepositscheduleupdate.go  achwithdrawal.go  achwithdrawalcreate.go  achwithdrawalschedule.go  achwithdrawalschedulecreate.go  activity.go  addordersrequestcreate.go  addresscreate.go  addressdetail.go  affirmagreementsrequestcreate.go  affirmagreementsresponse.go  agreement.go  alternativeinvestment.go  alternativeinvestmentdocument.go  alternativeorder.go  alternativeordercreate.go  any.go  asset.go  assetbuyingpower.go  assetcreate.go  assettradingconfig.go  (+404 more)
models/operations/: BUILD.bazel  accountaccreditationservicegetaccountaccreditation.go  accountaccreditationservicesetaccountaccreditationtype.go  accountsaddparty.go  accountsaffirmagreements.go  accountsassignlargetrader.go  accountsassignlargetraderlegalentity.go  accountscloseaccount.go  accountscreateaccount.go  accountscreateinterestedparty.go  accountscreatelegalentity.go  accountscreatelegalnaturalperson.go  accountscreatenote.go  accountscreaterestriction.go  accountscreatetrustedcontact.go  accountsdeactivateenrollment.go  accountsdeleteinterestedparty.go  accountsdeletetrustedcontact.go  accountsendlargetrader1.go  accountsendlargetraderlegalnaturalperson.go  accountsendrestriction.go  accountsenrollaccount.go  accountsgetaccount.go  accountsgetlegalentity.go  accountsgetlegalnaturalperson.go  accountsgetnote.go  accountslistaccounts.go  accountslistagreements.go  accountslistavailableenrollments.go  accountslistavailableenrollments1.go  accountslistavailablerestrictions.go  accountslistenrollments.go  accountslistentitlements.go  accountslistlegalentities.go  accountslistlegalnaturalpersons.go  accountslistnotes.go  accountsremoveparty.go  accountsreplaceparty.go  accountsupdateaccount.go  accountsupdateaccountgroup.go  (+202 more)
models/sdkerrors/: BUILD.bazel  status.go
retry/: BUILD.bazel
temp-location/ascend-sdk-go/: accountcreation.go  accountmanagement.go  accounttransfers.go  achtransfers.go  assets.go  authentication.go  enrollmentsandagreements.go  fixedincomepricing.go  gen.yaml  investigations.go  investordocs.go  journals.go  margins.go  reader.go  retirements.go  scheduletransfers.go  subscriber.go  wires.go
tests/: README  accountmanagement_test.go  alternativeaccountaccreditation_test.go  alternativeinvestmentdocuments_test.go  alternativeinvestments_test.go  alternativeorders_test.go  assets_test.go  assettradingconfig_test.go  checks_test.go  createorder_test.go  dataretrieval_test.go  investigations_test.go  margins_test.go  order_test.go  pagination_test.go  personmanagement_test.go  preipocompanies_test.go  preipofundingrounds_test.go  preiponewsevents_test.go  preiporesearchdocuments_test.go  qase_reporter.go  subscriber_test.go  test_main_test.go  testclient.go  testsimulation_test.go  utils.go  webhooks_test.go
tests/account_management/: account_management_test.go  person_management_test_additional.go  (+1 more)
tests/events/: BUILD.bazel  helpers.go  reader_test.go  subscriber_test.go
tests/helpers/: BUILD.bazel  common.go
types/: BUILD.bazel
(+3278 files in other folders)
