load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_sdk",
    srcs = glob(
        ["**/*.go"],
        exclude = [
            "**/*_test.go",
            "**/files.go",
            "**/tests/helpers/*",
        ],
    ),
    importpath = "ascend-sdk",
    visibility = ["//visibility:public"],
    deps = [
        "//ascend-sdk/v1/ascend-sdk-go/internal/hooks",
        "//ascend-sdk/v1/ascend-sdk-go/internal/utils",
        "//ascend-sdk/v1/ascend-sdk-go/models/components",
        "//ascend-sdk/v1/ascend-sdk-go/models/operations",
        "//ascend-sdk/v1/ascend-sdk-go/models/sdkerrors",
        "//ascend-sdk/v1/ascend-sdk-go/retry",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
