load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utils",
    srcs = glob(["**/*.go"]),
    importpath = "ascend-sdk/internal/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//ascend-sdk/v1/ascend-sdk-go/retry",
        "//ascend-sdk/v1/ascend-sdk-go/types",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_ericlagergren_decimal//:go_default_library",
    ],
)
