load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sdkerrors",
    srcs = glob(["**/*.go"]),
    importpath = "github.com/afs-public/ascend-sdk-go/models/sdkerrors",
    visibility = ["//visibility:public"],
    deps = [
        "//ascend-sdk/v1/ascend-sdk-go/models/components",
    ],
)
