load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "tests",
    srcs = glob(
        ["**/*.go"],
    ),
    tags = [
        "manual",
        "no-ci",
    ],
    deps = [
        "//ascend-sdk/v1/ascend-sdk-go:go_sdk",
        "//ascend-sdk/v1/ascend-sdk-go/models/components",
        "//ascend-sdk/v1/ascend-sdk-go/tests/helpers",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
